--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -16,7 +16,7 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
-				<div class="mx-auto w-11/12 md:w-3/5 lg:w-1/2 space-y-6 py-12 font-medium">
+				<div class="mx-auto w-4/5 md:w-1/2 max-w-prose space-y-8 py-12 font-medium">
 					<div class="mb-6 flex justify-center">
 						@button.Button(button.Props{
 							Href: "/p/public/articles",
