--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -16,12 +16,12 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
-				<div class="mx-auto w-4/5 md:w-1/2 max-w-prose space-y-8 py-12 font-medium">
-					<div class="mb-6 flex justify-center">
+				<div class="mx-auto w-4/5 md:w-1/2 space-y-8 py-12 font-medium">
+					<div class="mb-8 flex justify-center">
 						@button.Button(button.Props{
 							Href: "/p/public/articles",
 						}) {
-							Go Back to Articles
+                            Go Back to Articles
 						}
 					</div>
 
