--- a/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
+++ b/templates/views/article_ansible_plus_tailscale_equal_great_combo.templ
@@ -27,6 +27,7 @@ templ ArticleAnsiblePlusTailscaleEqualGreatCombo() {
 
 					<header class="flex flex-col w-full justify-center items-center mb-2">
 						<h1 class="text-3xl font-semibold leading-tight">{ ansiblePlusTailsclaleEqualGreatComboIDMetadata.Name }</h1>
+                        <h3 class="text-md text-gray-500 mt-2 font-bold">{ fmt.Sprintf("%d min read", ansiblePlusTailsclaleEqualGreatComboIDMetadata.ReadTimeMinutes) }</h3>
 					</header>
 
 					<h2 id="introduction" class="text-2xl font-bold mt-8 mb-4 group">
