--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -26,6 +26,7 @@ templ ArticleZeroTrustHomelab() {
 
 					<header class="flex flex-col w-full justify-center items-center mb-4">
 						<h1 class="text-3xl font-semibold leading-tight">{ zeroTrustHomelabMetadata.Name }</h1>
+                        <h3 class="text-md text-gray-500 mt-2 font-bold">{ fmt.Sprintf("%d min read", zeroTrustHomelabMetadata.ReadTimeMinutes) }</h3>
 					</header>
 
                     <h2 id="introduction" class="text-2xl font-bold mt-8 mb-4 group">
