--- a/templates/views/article_zero_trust_homelab_v2.templ
+++ b/templates/views/article_zero_trust_homelab_v2.templ
@@ -26,6 +26,7 @@ templ ArticleZeroTrustHomelabV2() {
 
 					<header class="flex flex-col w-full justify-center items-center mb-2">
 						<h1 class="text-3xl font-semibold leading-tight">{ zeroTrustHomelabV2Metadata.Name }</h1>
+                        <h3 class="text-md text-gray-500 mt-2 font-bold">{ fmt.Sprintf("%d min read", zeroTrustHomelabV2Metadata.ReadTimeMinutes) }</h3>
 					</header>
 
 				    <h2 id="motivation" class="text-2xl font-bold mt-8 mb-4 group">
