feat: rename article - defer deep dive
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/article_defer_deep_dive.templ
+++ b/templates/views/article_defer_deep_dive.templ
@@ -9,9 +9,9 @@ import (
 	"github.com/ip812/blog/templates/code"
 )
 
-var cloudflareWorkersImpressionsMetadata = articles.GetByID(articles.CloudflareWorkersImpressionsID)
+var deferDeepDiveMetadata = articles.GetByID(articles.DeferDeepDiveID)
 
-templ ArticleCloudflareWorkersImpressions() {
+templ ArticleDeferDeepDive() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
@@ -25,8 +25,8 @@ templ ArticleCloudflareWorkersImpressions() {
 					</div>
 
 					<header class="flex flex-col w-full justify-center items-center mb-2">
-						<h1 class="text-3xl font-semibold leading-tight">{ cloudflareWorkersImpressionsMetadata.Name }</h1>
-                        <h3 class="text-md text-gray-500 mt-2 font-bold">{ fmt.Sprintf("%d min read", cloudflareWorkersImpressionsMetadata.ReadTimeMinutes) }</h3>
+						<h1 class="text-3xl font-semibold leading-tight">{ deferDeepDiveMetadata.Name }</h1>
+                        <h3 class="text-md text-gray-500 mt-2 font-bold">{ fmt.Sprintf("%d min read", deferDeepDiveMetadata.ReadTimeMinutes) }</h3>
 					</header>
 					<div class="mt-6">
 						@code.Code(code.Props{
@@ -44,7 +44,7 @@ func main() {
 }` }
 						}
 					</div>
-					<img class="w-full h-auto my-6" src="https://www.jaegertracing.io//img/jaeger-logo.png" alt="Cloudflare Workers impressions article"/>
+					<img class="w-full h-auto my-6" src="https://www.jaegertracing.io//img/jaeger-logo.png" alt="Defer Deep Dive"/>
 					<p>
 						Some Go code.
 					</p>
@@ -53,11 +53,11 @@ func main() {
 						<h2 class="text-2xl font-bold mb-4">Comments</h2>
 						<hr class="border-t-2 border-gray-300 mb-6"/>
                         @components.CommentInputForm(components.CommentInputFormProps{
-                            ArticleID: articles.CloudflareWorkersImpressionsID,
+                            ArticleID: articles.DeferDeepDiveID,
                         })
                         <div 
                             id="comments"
-                            hx-get={ fmt.Sprintf("/api/public/v0/articles/%d/comments", articles.CloudflareWorkersImpressionsID) }
+                            hx-get={ fmt.Sprintf("/api/public/v0/articles/%d/comments", articles.DeferDeepDiveID) }
 		                    hx-target="#comments"
 		                    hx-swap="innerHTML"
                             hx-trigger="load"
