--- a/templates/views/landing_page.templ
+++ b/templates/views/landing_page.templ
@@ -28,7 +28,7 @@ templ LandingPage() {
                 <p class="text-lg md:text-xl max-w-md leading-relaxed">
                     I'm a software engineer from Sofia, Bulgaria who is passionate about
                     <span class="font-semibold">Go</span>, <span class="font-semibold">Cloud</span>, and <span class="font-semibold">DevOps</span>.
-                    I am an OSS contributor to Jaeger and OpenTelemetry and I blog here about my side projects and experiences.
+                    I am an OSS contributor to Jaeger and I blog here about my side projects and experiences.
                 </p>
             </div>
 
