--- a/templates/views/article_defer_deep_dive.templ
+++ b/templates/views/article_defer_deep_dive.templ
@@ -196,8 +196,107 @@ templ ArticleDeferDeepDive() {
 					</h3>
 
                     <p>
-                        However, if you want to avoid this behaviour there are two common approaches:
+                        This means wrapping the deferred function call inside another function. That way, you capture the variable by reference, not by value like before. 
+                        Variables referenced by a defer closure are evaluated during the closure execution(hence, when the surrounding function returns).
+                        The implementation looks like this:
                     </p>
+
+					<div>
+						@code.Code(code.Props{
+							Language:       "go",
+							ShowCopyButton: true,
+							Size:           code.SizeLg,
+						}) {
+							{ 
+`func captureByReferenceClosure()  {
+	file := "file1.txt"
+	defer func() {
+		printFileContent(file)
+	}()
+
+	file = "file2.txt"
+}
+
+// content file2.txt` }
+						}
+					</div>
+
+					<h3 id="ruletwomemoryaddress" class="text-2xl font-bold mb-2 group">
+						<a href="#ruletwomemoryaddress" class="text-xl text-gray-900 hover:text-blue-600 cursor-pointer" aria-label="Link to Introduction">
+						    Pass the memory address of the variable instead of its value
+						</a>
+					</h3>
+
+                    <p>
+                        By passing a pointer to the variable, you ensure that the deferred function accesses the current value of the variable when it executes.
+                        However, usually using a closure is more idiomatic in Go.
+                        Here’s how you can implement this approach:
+                    </p>
+
+					<div>
+						@code.Code(code.Props{
+							Language:       "go",
+							ShowCopyButton: true,
+							Size:           code.SizeLg,
+						}) {
+							{ 
+`func captureByReferencePointer()  {
+	file := "file1.txt"
+	defer printFileContent(&file)
+
+	file = "file2.txt"
+}` }
+						}
+					</div>
+
+					<h2 id="rulethree" class="text-2xl font-bold mt-8 mb-4 group">
+						<a href="#rulethree" class="text-xl text-gray-900 hover:text-blue-600 cursor-pointer" aria-label="Link to Introduction">
+						    Rule 3: Deferred functions may read and assign to the returning function’s named return values
+						</a>
+					</h2>
+
+                    <p class="mt-2">
+                        If a function has named return values, deferred functions can access and modify those values before the function actually returns.
+                        This can be useful for setting return values based on cleanup operations or error handling.
+                        Popular example for this is in the case when we want to capture errors from the deferred function and return them:
+                    </p>
+
+					<div>
+						@code.Code(code.Props{
+							Language:       "go",
+							ShowCopyButton: true,
+							Size:           code.SizeLg,
+						}) {
+							{ 
+`type File struct {
+	Name string
+}
+
+func Open(name string) (*File, error) {
+	file := &File{Name: name}
+	return file, nil
+}
+
+func (f *File) Close() error {
+	return fmt.Errorf("Error closing file: %s", f.Name)
+}
+
+func correctErrorHandling() (err error) {
+	file, err := Open("nonexistent.txt")
+	if err != nil {
+		return err
+	}
+	defer func() {
+		err = errors.Join(err, file.Close())
+	}()
+
+	return fmt.Errorf("Random error")
+}
+
+// Random error
+// Error closing file: nonexistent.txt` }
+						}
+					</div>
 
 					<h2 id="conclusion" class="text-2xl font-bold mt-8 mb-4 group">
 						<a href="#conclusion" class="text-gray-900 hover:text-blue-600 cursor-pointer" aria-label="Link to Conclusion">
