--- a/templates/views/landing_page.templ
+++ b/templates/views/landing_page.templ
@@ -27,8 +27,10 @@ templ LandingPage() {
                 </div>
                 <p class="text-lg md:text-xl max-w-md leading-relaxed">
                     I'm a software engineer from Sofia, Bulgaria who is passionate about
-                    <span class="font-semibold">Go</span>, <span class="font-semibold">Cloud</span>, and <span class="font-semibold">DevOps</span>.
-                    I am an OSS contributor to Jaeger and I blog here about my side projects and experiences.
+                    <span class="font-semibold text-blue-500">Go</span>, 
+                    <span class="font-semibold text-purple-500">Infrastructure</span>, and 
+                    <span class="font-semibold text-orange-500">Observability</span>.
+                    I am an OSS contributor to Jaeger and I blog here about my learning journey.
                 </p>
             </div>
 
