feat: rm x link + adjust observability article title
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/footer.templ
+++ b/templates/footer.templ
@@ -10,7 +10,7 @@ templ Footer() {
     	    <div class="max-w-6xl mx-auto px-6 py-4 flex justify-end items-center space-x-4">
     	    	<a href="https://github.com/iypetrov" target="_blank">@icon.Github(icon.Props{Size: 24, Class: "text-black hover:text-blue-600"})</a>
     	    	<a href="https://www.linkedin.com/in/ilia-petrov-0845732b6" target="_blank">@icon.Linkedin(icon.Props{Size: 24, Class: "text-black hover:text-blue-600"})</a>
-    	    	<a href="https://x.com/deviliapetrovv" target="_blank">@icon.Twitter(icon.Props{Size: 24, Class: "text-black hover:text-blue-600"})</a>
+    	    	// <a href="https://x.com/deviliapetrovv" target="_blank">@icon.Twitter(icon.Props{Size: 24, Class: "text-black hover:text-blue-600"})</a>
     	    </div>
     	    &copy; 2025 Ilia Petrov. All rights reserved.
         </div>
